--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ i<!DOCTYPE html>
     <footer>
         <p>&copy; 2023 DanielGym</p>
     </footer>
+
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-413ab507-2f66-4f2b-8ca5-dc63e3fca289"></div>
 </body>
 </html>
 
