--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@ i<!DOCTYPE html>
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="logos/logo-fitness.png" alt="Logo fitness" height="60px" width="50px"></a> </a></div>
+        <div class="logo"><a href="index.html"><img src="logos/alexander-gym-sin fondo.png" alt="Logo fitness" height="60px" width="150px"></a> </a></div>
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Acerca de</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Portafolio</a></li>
+                <li><a href="Acerca del gym.html">Acerca del gym</a></li>
+                <li><a href="Productos para ti.html">Productos para ti</a></li>
+                <li><a href="#">Salud y vida</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
@@ -24,25 +24,27 @@ i<!DOCTYPE html>
 
     <main>
         <section class="hero">
-            <h1>Bienvenido a Mi Sitio Web, DanielGym</h1>
+            <h1>Bienvenido a Mi Sitio Web, ALEXANDER GYM</h1>
             <p>Te invito a ser parte de nuestro maravilloso equipo de socios que quieren tener. un nuevo estilo de vida. .</p>
             <a href="#" class="cta-button">Explora Más</a>
         </section>
 
         <section class="about">
             <h2>Acerca de Nosotros</h2>
-            <p>Somos un equipo de profesionales apasionados por querer mejorar el estilo de vida de las personas, asi tengan un excelente fisco y saludo. Nuestra misión es proporcionar información valiosa y soluciones a nuestros clientes.</p>
+            <p>Somos un equipo de profesionales apasionados por querer mejorar el estilo de vida de las personas, asi tengan un excelente fisico y salud. Nuestra misión es proporcionar información valiosa y soluciones a nuestros clientes.</p>
         </section>
 
         <!-- Puedes agregar más secciones aquí -->
     </main>
 
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div class="elfsight-app-413ab507-2f66-4f2b-8ca5-dc63e3fca289"></div>
+
     <footer>
-        <p>&copy; 2023 DanielGym</p>
+        <p>&copy; 2023 ALEXANDER GYM</p>
     </footer>
 
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-<div class="elfsight-app-413ab507-2f66-4f2b-8ca5-dc63e3fca289"></div>
+
 </body>
 </html>
 
