--- a/Productos para ti.html
+++ b/Productos para ti.html
@@ -12,18 +12,18 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Acerca de</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="Acerca del gym.html">Acerca del gym</a></li>
                 <li><a href="Productos para ti.html">Productos para ti</a></li>
-                <li><a href="#">Salud y vida</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="Salud y vida.html">Salud y vida</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">&#9776;</label>
     </header>
 
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-    <div class="elfsight-app-413ab507-2f66-4f2b-8ca5-dc63e3fca289"></div>
+        <div class="elfsight-app-413ab507-2f66-4f2b-8ca5-dc63e3fca289"></div>
     
 </body>
 </html>
