--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ i<!DOCTYPE html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexander Gym</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="logos/alexander-gym-sin fondo -icono.ico">
 </head>
 <body>
     <header>
@@ -12,11 +13,11 @@ i<!DOCTYPE html>
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="Acerca del gym.html">Acerca del gym</a></li>
                 <li><a href="Productos para ti.html">Productos para ti</a></li>
-                <li><a href="#">Salud y vida</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="Salud y vida.html">Salud y vida</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">&#9776;</label>
@@ -36,9 +37,9 @@ i<!DOCTYPE html>
 
         <!-- Puedes agregar más secciones aquí -->
     </main>
-
+    
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-    <div class="elfsight-app-413ab507-2f66-4f2b-8ca5-dc63e3fca289"></div>
+        <div class="elfsight-app-413ab507-2f66-4f2b-8ca5-dc63e3fca289"></div>
 
     <footer>
         <p>&copy; 2023 ALEXANDER GYM</p>
