--- a/Acerca del gym.html
+++ b/Acerca del gym.html
@@ -23,6 +23,11 @@
         <label for="nav-toggle" class="nav-toggle-label">&#9776;</label>
     </header>
 
+        <!--chat por whatsapp-->
+        <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+        <div class="elfsight-app-7bbfc650-e6d3-45ee-ba10-41bf7a84256f"></div>
+
+
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
         <div class="elfsight-app-413ab507-2f66-4f2b-8ca5-dc63e3fca289"></div>
     
