--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@ i<!DOCTYPE html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexander Gym</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="logos/alexander-gym-sin fondo -icono.ico">
+    <link rel="icon" href="logos/alexander-gym-sin fondo.png">
 </head>
 <body>
+
+    <!--baner cuenta regresiva-->
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+        <div class="elfsight-app-1504a6a1-c9e7-4826-9f14-8ec20d7fbd58"></div>
+
+        <!--Burbuja flot. subscribete-->
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+        <div class="elfsight-app-140a1bff-6316-4fa6-89d5-9f489ce9b156"></div>
+
+    <!--menu interactivo-->
     <header>
         <div class="logo"><a href="index.html"><img src="logos/alexander-gym-sin fondo.png" alt="Logo fitness" height="60px" width="150px"></a> </a></div>
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -37,9 +47,16 @@ i<!DOCTYPE html>
 
         <!-- Puedes agregar más secciones aquí -->
     </main>
-    
+
+    <!--chat por whatsapp-->
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+        <div class="elfsight-app-7bbfc650-e6d3-45ee-ba10-41bf7a84256f"></div>
+
+    <!--lista musical-->
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
         <div class="elfsight-app-413ab507-2f66-4f2b-8ca5-dc63e3fca289"></div>
+    <!--chat por viber-->
+    
 
     <footer>
         <p>&copy; 2023 ALEXANDER GYM</p>
