--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="stylesheet" href="styles-contacto.css">
 </head>
 <body>
 
@@ -21,6 +22,11 @@
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">&#9776;</label>
     </header>
+
+        <!--chat por whatsapp-->
+        <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+        <div class="elfsight-app-7bbfc650-e6d3-45ee-ba10-41bf7a84256f"></div>
+
 
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
         <div class="elfsight-app-413ab507-2f66-4f2b-8ca5-dc63e3fca289"></div>
